test API of results